--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,19 @@
 /***************** PSEUDO & GENERAl CLASSES ***************/
 
+/** FONTS **/
+
+font-family: 'Source Sans Pro', sans-serif;
+font-family: 'Roboto Slab', serif;
+
 #main-container{ overflow: hidden; }
-body{  -webkit-font-smoothing: antialiased; font-family: 'GFS Didot'; }
+body{  -webkit-font-smoothing: antialiased; font-family: 'Roboto Slab'; }
 .no-last{ float: left !important; }
 input{ -webkit-appearance: none; }
 section{ position: relative;}
 .page-header{ text-align: center; margin-bottom: 44px; border-bottom: none;}
 .page-header i{ font-size: 24px; }
 .page-header h4{ margin-top: 11px; }
-h1, h2, h3, h4, h5, h6 {color: #222;font-family: "Courier New","Helvetica Neue","Helvetica",Helvetica,Arial,sans-serif;font-weight: bold; text-transform:uppercase;letter-spacing: 5px;line-height: 1.2125em;text-rendering: optimizelegibility;}
+h1, h2, h3, h4, h5, h6 {color: #222;font-family: "Roboto Slab","Helvetica Neue","Helvetica",Helvetica,Arial,sans-serif;font-weight: bold; text-transform:uppercase;letter-spacing: 3px;line-height: 1.2125em;text-rendering: optimizelegibility;}
 a {cursor: pointer;color: #FFF;}
 a:hover {text-decoration:none; color: #222;}
 a:focus {outline: none;text-decoration:none}
@@ -296,7 +301,7 @@ a:focus {outline: none;text-decoration:none}
 
 .home-shrink .display-h{
 	-webkit-transition: all .1s ease;
-	letter-spacing: 20px;
+	letter-spacing: 10px;
 	margin-right: -20px;
 }
 
@@ -387,7 +392,7 @@ h2.roles {
 	margin-bottom: 22px;
 }
 
-.diamond-border{  
+.diamond-border{
 	width: 90%;
 	height: 90%;
 	border: 2px solid #222;
@@ -764,7 +769,7 @@ h4.organisation {
 
 h4.organisation {
     margin-top: 30px;
-	padding-top: 10px;	
+	padding-top: 10px;
 }
 .organisation:before{
 	background: none repeat scroll 0 0 #ddd;
@@ -972,7 +977,7 @@ h4.organisation {
 	color: #444;
 	transform: rotate(-45deg);
 	-ms-transform: rotate(-45deg); /* IE 9 */
-	-webkit-transform: rotate(-45deg); /* Safari and Chrome */	
+	-webkit-transform: rotate(-45deg); /* Safari and Chrome */
 }
 
 .post-info {
@@ -1005,16 +1010,16 @@ blockquote {
 }
 .social-row.share .btn {
   padding: 0 10px;
-  background: none; 
+  background: none;
 }
 .social-row.share .btn i{
-  color: #222; 
+  color: #222;
 }
 .social-row.share .btn:hover {
-  background: #222; 
+  background: #222;
 }
 .social-row.share .btn:hover i{
-  color: #fff; 
+  color: #fff;
 }
 #comments {
   margin-bottom: 50px;
@@ -1123,11 +1128,11 @@ blockquote {
 }
 .single-post-footer  {
   background: #f7f7f7;
-  padding: 75px 0;  
+  padding: 75px 0;
   margin-top: 75px;
   margin-bottom: 75px;
 }
-.single-post-footer .newsletter-box #notifyMe { 
+.single-post-footer .newsletter-box #notifyMe {
   width: 80%;
   margin: auto;
 }
@@ -1325,7 +1330,7 @@ blockquote {
 	#menu{ float: none; }
 	h3.period,h4.organisation {float: left;clear: both;}
 	.organisation:before{left: 20px;}
-	
+
     .single-post-footer .newsletter-box { display: block;clear: both;padding-top: 75px;}
 }
 
@@ -1348,8 +1353,8 @@ blockquote {
 }
 
 /************* TABLETS (portrait and landscape) ************/
-@media only screen 
-and (min-device-width : 768px) 
+@media only screen
+and (min-device-width : 768px)
 and (max-device-width : 1024px) {
 
 	#home-slider .slides li{ background-attachment: scroll !important; }
@@ -1361,9 +1366,9 @@ and (max-device-width : 1024px) {
 
 
 /*********** TABLETS (portrait) ************/
-@media only screen 
-and (min-device-width : 768px) 
-and (max-device-width : 1024px) 
+@media only screen
+and (min-device-width : 768px)
+and (max-device-width : 1024px)
 and (orientation : portrait) {
 
 	#home-slider .display-h{ font-size: 45px; }
